--- a/jvm.html
+++ b/jvm.html
@@ -6,6 +6,7 @@
 	<script src="jdk.js"></script>
 	<script src="classloader.js"></script>
 	<script src="jvm.js"></script>
+	<script src="native.js"></script>
 	<script>
 		function runnit() {
 			var src = document.getElementById("sourcehex").value;
