Float and double loading, hacked up string objects, hacked up long handling. Going off the rails a bit here without real type handling inside the VM. Longs especially just aren't viable with the JS primitive Numbers

--- a/jvm.html
+++ b/jvm.html
@@ -5,6 +5,7 @@
 	<script src="objects.js"></script>
 	<script src="jdk.js"></script>
 	<script src="classloader.js"></script>
+	<script src="float.js"></script>
 	<script src="jvm.js"></script>
 	<script src="native.js"></script>
 	<script>
