Checkpoint while transitioning instruction execution to new module. General streamlining in progress also, including: merging of JClass and LoadedClass into KLClass, which represents the VM view of a class (vs a Java land object); move to using the dotted notation for class names internally instead of the legacy class file slashes; cleaning up the distinctions between "method info" "method reference" and "methods", ditto fields. Primitives/type/value handling still needs normalization, and only a handful of instructions are implemented in the new execution model.

--- a/jvm.html
+++ b/jvm.html
@@ -8,6 +8,7 @@
 	<script src="float.js"></script>
 	<script src="jvm.js"></script>
 	<script src="native.js"></script>
+	<script src="exec.js"></script>
 	<script>
 		function runnit() {
 			var src = document.getElementById("sourcehex").value;
