Start of "long" support. Simple KLInt64 type that stores 8-byte buffer and can do arithmetic.

--- a/jvm.html
+++ b/jvm.html
@@ -1,11 +1,12 @@
 <html>
 <head>
 	<script src="constants.js"></script>
+	<script src="float.js"></script>
+	<script src="long.js"></script>
 	<script src="types.js"></script>
 	<script src="objects.js"></script>
 	<script src="jdk.js"></script>
 	<script src="classloader.js"></script>
-	<script src="float.js"></script>
 	<script src="jvm.js"></script>
 	<script src="native.js"></script>
 	<script src="exec.js"></script>
