Centralize VM logging into one sink, add info/warn/err

--- a/jvm.html
+++ b/jvm.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<script src="logdbg.js"></script>
 	<script src="constants.js"></script>
 	<script src="float.js"></script>
 	<script src="long.js"></script>
