Correct management of UTF8 (class file) and UTF16 (java.lang.String) encodings. - Javascript's strings are UTF16, and those power the VM operations. - Class file constant strings are provided in UTF8 format. - Java String objects can store internal bytes as LATIN1 or UTF16. We've been using   LATIN1 as a quick hack because of the ASCII overlap but it immediately breaks when   you use anything above that, and it broke. - BYO UTF16 encode and decode; UTF8 decode via Rogue Amoeba.

--- a/jvm.html
+++ b/jvm.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<script src="utf.js"></script>
 	<script src="stdio.js"></script>
 	<script src="logdbg.js"></script>
 	<script src="constants.js"></script>
